  `SetMassCalib()`, `SetMassCalib2()`, `SetMassCalibEx()`, `SetMassCalib2Ex()`.

* Added TwToolDll functions `MultiPeakFit()`, `EvalMultiPeak()`,
  `GetMassCalibInfo()`, `FitResolution()`, `EvalResolution()`.

* Added TwH5Dll functions `H5AddUserDataMultiRow()`, `DeleteAttributeInH5()`,
  `WaitForExclusiveFileAccess()`, `WriteNetCdfTimeSeriesFile()`.


TofDaqR 0.3.7
--------------------------------------------------------------------------------

* Corrected bug in `DecodeEventList()`.

* Added Authors@R, URL and BugReports fields in DESCRIPTION, removed Date field.

* Corrected and improved documentation.

* Added vignette that links to the API documentation files.

* Removed the macos_i386 TofDaq libraries.


TofDaqR 0.3.6
--------------------------------------------------------------------------------

* Corrected cstring to std::string conversion bug in `GetRegUserData...()`
  functions.

* Corrected off-by-one bug in `GetPeakParametersFromH5()`.

* Corrected bug in `configure` script (MacOS and Linux version).


TofDaqR 0.3.5
--------------------------------------------------------------------------------

* Updated `configure` script to work with Rcpp >=0.12.12.

* Updated README.md with easier installation instructions.

* Updated to TofDaq API 1.99r601.

* Corrected bug in `GetUserDataFromH5()` and added the option to read all rows.


TofDaqR 0.3.4
--------------------------------------------------------------------------------

* Corrected bug in `configure.win` script which made source package installation
  on 32-bit Windows to fail.


TofDaqR 0.3.3
--------------------------------------------------------------------------------

* Corrected bugs in `LoadIniFile()` and `SaveIniFile()`.

* Corrected bug in `configure` script (MacOS and Linux version).

* Added wrapper functions `GetTofDataSinglePeak()` and `FitTofDataSinglePeak()`.


TofDaqR 0.3.2
--------------------------------------------------------------------------------
